fixed horizontal scroll

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,6 +38,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   letter-spacing: -0.28px;
+  overflow-x: hidden;
 }
 
 .container {
